--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==1.8.4
+django-cors-headers==1.1.
 django-debug-toolbar==1.4
+djangorestframework==3.1.1
 MySQL-python==1.2.5
 Pillow==2.7.0
 argparse==1.2.1
-djangorestframework==3.1.1
 wsgiref==0.1.2
