--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+boto==2.38.0
 Django==1.8.4
 django-cors-headers==1.1.
 django-debug-toolbar==1.4
+django-storages==1.1.8
 djangorestframework==3.1.1
 MySQL-python==1.2.5
 Pillow==2.7.0
